Lots of new icons!

--- a/ILEditor/UserTools/SpoolListing.resx
+++ b/ILEditor/UserTools/SpoolListing.resx
@@ -124,8 +124,8 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAk
-        CAAAAk1TRnQBSQFMAwEBAAEoAQABKAEAARABAAEQAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMA
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAC
+        CAAAAk1TRnQBSQFMAwEBAAFAAQABQAEAARABAAEQAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMA
         AUADAAEQAwABAQEAAQgGAAEEGAABgAIAAYADAAKAAQABgAMAAYABAAGAAQACgAIAA8ABAAHAAdwBwAEA
         AfABygGmAQABMwUAATMBAAEzAQABMwEAAjMCAAMWAQADHAEAAyIBAAMpAQADVQEAA00BAANCAQADOQEA
         AYABfAH/AQACUAH/AQABkwEAAdYBAAH/AewBzAEAAcYB1gHvAQAB1gLnAQABkAGpAa0CAAH/ATMDAAFm
@@ -153,56 +153,16 @@
         AQAB/wGZAf8BAAH/AcwCAAH/AcwBMwEAAf8BzAFmAQAB/wHMAZkBAAH/AswBAAH/AcwB/wEAAv8BMwEA
         AcwB/wFmAQAC/wGZAQAC/wHMAQACZgH/AQABZgH/AWYBAAFmAv8BAAH/AmYBAAH/AWYB/wEAAv8BZgEA
         ASEBAAGlAQADXwEAA3cBAAOGAQADlgEAA8sBAAOyAQAD1wEAA90BAAPjAQAD6gEAA/EBAAP4AQAB8AH7
-        Af8BAAGkAqABAAOAAwAB/wIAAf8DAAL/AQAB/wMAAf8BAAH/AQAC/wIAA/8CAAHxAbUKrQG1AfEyAAG0
-        AfQF8wP0A/8BtDIAAa0B8wrbAf8BrTIAAa0B8wHbCNwB2wH/Aa0yAAGzAfQI2wLaAf8BrTIAAbMB9AoZ
-        Af8BrTIAAbQB9AoZAf8BszIAAbQB9AoZAfQBszIAAbQB9AoZAfQBtDIAAbQB9AoZAfQBtDIAAbQB/wcZ
-        Ad0CCQH/AbQyAAG0Af8HGQHzAfQB/wH0AbMyAAG0Af8GGQHdAf8CGQG7AQkyAAG0Af8GGQHdAf8BCQG6
-        AbQB/zIAAbsI9AEZAboBtAH/MwAB8gG7CLQBCQH/MwABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEA
-        AQEFAAGAFwAD/wEAAYABAQYAAYABAQYAAYABAQYAAYABAQYAAYABAQYAAYABAQYAAYABAQYAAYABAQYA
-        AYABAQYAAYABAQYAAYABAQYAAYABAQYAAYABAQYAAYABAQYAAYABAwYAAYABBwYACw==
+        Af8BAAGkAqABAAOAAwAB/wIAAf8DAAL/AQAB/wMAAf8BAAH/AQAC/wIAA/8EAAsbAfQyAAH0AfALGwH0
+        MgAB8wGZAhsHGgIbAfQyAAHzAZkLGwH0MgAB8wGZAhsHGgIbAfQyAAHzAZkLGwH0MgAB8wGZAhsHGgIb
+        AfQyAAHzAZkLGwH0MgAB8wGZCxsB9DIAAfMBmQIbBxoCGwH0MgAB8wGZCxsB9DIAAfMBmQIbAxoCGwEa
+        ApkB8AH/MgAB8wGZBxsBGgGZAbwB/zMAAfMBmQcbARoBvAEHNAAB8wGZAfAG8QHwApk0AAHzC5kzAAFC
+        AU0BPgcAAT4DAAEoAwABQAMAARADAAEBAQABAQUAAYAXAAP/AQAB4AEBBgABgAEBBgABgAEBBgABgAEB
+        BgABgAEBBgABgAEBBgABgAEBBgABgAEBBgABgAEBBgABgAEBBgABgAEBBgABgAEBBgABgAEDBgABgAEH
+        BgABgAEHBgABgAEHBgAL
 </value>
   </data>
   <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>127, 17</value>
   </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="refreshButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAM6SURBVDhPXZLZTxNRGEf7pPFv8EGNOyrENUSjISpRVCSI
-        EImKpZRawa0qGBEiKCoimuBOXILRgDvYQEGhEJDSVkEx0BaUVRYRqJQuc9vODD/vTKtGv+Tkzss5c+/c
-        kYSm10m3XTZUReQZfobnGhi6EpErwmokEZf1ZMslXdualHf5AdHPpkj+n7DzDe9G7GRszM5wVqcbVsdf
-        xuwCBJYhOzLU35BwrcO1+ZBmql/1zdYc3YjN6eb0vV4Y+1gYv7Ew9LLQ9XhQ99WNSrMTbhYoa2eQUdon
-        RJh/IlsuNjATLg+a+zl87GfpyuKDGPGgvtONt2YXDfBoHuKQo89HtqYX60/VFPl1uoNLjUQIfKKBlgEW
-        nwY4Mfa+z4uGLg+qOxj0/HCKR0mvSUWmNgOh6fWsX/cFbE4PWukb2iit33l8phHNVxOy9TlIqtoHhWYP
-        ZKW7cEabitNvjiH81gHer9Mj5DSScRqwfJ+EmcomSlWXBVmNWbjbch3qL89R2vEUL9uL8NzyCMWmQqhK
-        DiD06rpOMRBGA1YaaB+eFLFQbn0sxM2mPLzueIbM2pPYXRyJmIfhOK5OxtFXSmzMlf7dwabsRjLm8MDs
-        l4VdnNAeRYI6FnEvopFSfgpN9MPqe7yQFspw8HES1mfqSLAqeJoYCD2rI6P0vs3+I/zGNMSjdZBHS78X
-        J0uy8IFe8ZGiNNgYD9am6YgoCyPUhifcMA1OioIPjt4KQ2UWycUqxD2Ih5H+GwYaURQkYHnKEgQeWYgA
-        5dxeSUhaAxmyEUSXuRFTRrCznCCKPkep3Qi/dxxJT2VIfLwXazJXYlXaUsTejsRV4znIH+7BHNmsAsnq
-        1DrSbyU4XM+jsB14YAHumoHIOzugfCLF7eYruNGUi/z3F6mYjTxDFpTFUsyJn9k0Y9/0EEmwqtbV9cMx
-        qazlsV/LIbGGhbyGE9l8/TDi7scgtmAHglQBWJQ8D/MVszFXtoETZWGWKau7hycYe9eIi+8eZdA9wqDT
-        z6iDfvkbUkRc2A4H4WBnvDzLcbYFcRUmURZmhfJNcpC8snqposoapKgkf0j0EZhYTgKUUVygvIIslleM
-        L5ZVaAPjNQk+WyL5BRW6p8OcdtGGAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="toolStripButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALnSURBVDhPVZFbSFNxHMdXpj3XU70UQg/hQ1L00IVAZrO0
-        hqAZ9CKSlwQzKEpRlMSsvCSRRARR1EMSCSJel/OCuk1nmnnbtNy8T52bl13O/2xn27ffOZuXfvDld87D
-        93O+39+RiaMo6km7WTWgTnw1sKGsHOBoM0nV4tazxKp+llChnbj8pO9NVMr3CMm0f+Kfa/qsDmazOTif
-        3cXD7tyTzSGKwWhxoLhxAek10+7rua2HQ9bg3CjXWrdcvK9/zgv9vAD9goCBOQHaWQ96/vJQGVzgBaB5
-        ikNxw7wI4f6DJLzUcNtuD4YXffi1KNAW8FOCeNA7w6Pd4CaAH8MWH/TLXpS1LkBe0FUbslOCCh0TASME
-        +L0kYGTJJ8EG573QmDzomOYwu+aSqjiZgLVNNxRFvULIHgRsuTwYpy9MkMZX/BiVIGIKr5RCTSlaJpxo
-        GtsG1UVcqYaF7FShXMc2CWBcCcBA5knShMWPMYIN0U36Z4OQzj8c1HSHTZcXcc90e4B4AtgJMLUakGQk
-        GQg2vhxMIkEoSR/VEUF2AihK9wGulemYzemBYdfs300iQsS7DFEdMYmOZHV4IS/ZB1CUatk6/W/xqztm
-        CUA1dlLov7xFT2oUOmLD0X3nJPLTsvaOKC/RstVtHpPLwdhB0TFJO+bRvCtgLdUIGFRwf3sEfU401LGH
-        ciVATKGGWbYYUpp53G5muNXCkEzPyY08kpoY6pJPgSMzapRA/hHgRSTWK2PQJg8zS4BLeT1s0c7woNeP
-        z1PAJyPwwQC8p/2Othg7MFyP/bP59Bja5YcCEuDCw263ac0ZyO72416nD5ldAjK6fJLu0ntD0gm4PqYD
-        ZOLzZNggzWeHQaUIW5IA57I7zKvbnMNkdfvN6xzMVg4zIa07vTB+rcRg1mlY8iNhLQiHKeMA1MoItF09
-        WCgBzmf/yInOUHWczVLbo7NUbFeZQZ3JbGOPU+8LtfHHA2p5OOrijvKvlRfrZTKZ7B+h58dulu8JmwAA
-        AABJRU5ErkJggg==
-</value>
-  </data>
 </root>
