--- a/ILEditor/UserTools/UserToolList.resx
+++ b/ILEditor/UserTools/UserToolList.resx
@@ -124,8 +124,8 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADa
-        EAAAAk1TRnQBSQFMAgEBCAEAAYABAAGAAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACK
+        DgAAAk1TRnQBSQFMAgEBCAEAAZABAAGQAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAATADAAEBAQABCAYAAQwYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -153,50 +153,41 @@
         AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8ADwABLgEC
-        Af8XAAHzAZgBcgJPAXIB7QHxBQAB8QG1Cq0BtQHxCwABLgFQAU8B9BQAAf8BmAFPAZgDuwEIAXgBSQHt
-        Af8DAAG0AfQF8wP0A/8BtAEAAQcFtAFQAU8CLgFQAZgBUAEoAfcBAAEHBbQDzwWuAQcCAAH/AngBCAK7
-        AboCtAGYAZkCcgH/AgABrQHzCtsB/wGtAQABtAX/AVAEmAF4AZgBUAEoAfQBtA3/Aa4CAAGYAXgBmQF4
-        AboBtAG6ArQCcgGYAXIB7QIAAa0B8wHbCNwB2wH/Aa0BAAG0Bf8BUAGYBXgBmAFQAS4BtAH/AdQB/wPv
-        AfcFkgH/Aa4BAAH0AZcBCAKXAboDtAGzAZEBlwFyAZkBSQHxAQABswH0CNsC2gH/Aa0BAAG0Bf8BUAGZ
-        A5gBeAGYAVABLgH/AbQN/wGuAQACmAEIAZ0BmAS0ArMBtAGRAXgBmAHtAQABswH0ChkB/wGtAQABtAX/
-        BFABcgGYAVABTwGuAQABtAH/AdsB/wEHBO8E9wH/Ac8BAAF4AQgBmAK7A7QDswG0AZEBcgGZAVABAAG0
-        AfQKGQH/AbMBAAG0Cf8BUAF4AVAB9gHPAQABtA3/Ac8BAAGXARsBlwGdAbsBtAG6AbQBugGdAboBkQJy
-        AQgBTwEAAbQB9AoZAfQBswEAAbQJ/wJQAfMB/wHPAQABtAH/AdsB/wMHBu8B/wHPAQABlwHCAZgBlwK7
-        AbQBugG7AZ0CdwGXAXIBCAFPAQABtAH0ChkB9AG0AQABtAj/BPQB/wG0AQABtA3/AbQBAAF4AQgBmAGe
-        AQgBwgO6AZcCdwKXAZkBcgEAAbQB9AoZAfQBtAEAAbQH/wL0A/MB/wG0AQABtAH/AdsB/wkHAf8BtAEA
-        AQgBmQEIAsEBwgK7AroCnQGXA5gBAAG0Af8HGQHdAgkB/wG0AQABtA3/AbQBAAG0Df8BtAEAAfQBlwEb
-        AQgBwQIIArsCugG7AZgBCAFQAfMBAAG0Af8HGQHzAfQB/wH0AbMBAA+0AQAPtAIAAQgBmALCAfEBwgG7
-        AQkDuwEIAXgBmAIAAbQB/wYZAd0B/wIZAbsBCQEAAbUNCQG0AQABtQ0JAbQCAAH/ApgCGwHCAggCuwEI
-        ApgB/wIAAbQB/wYZAd0B/wEJAboBtAH/AQAB8QG7C7QBtQHxAQAB8QG7C7QBtQHxAwAB/wEIAZcFCAGY
-        AZcBmAH/AwABuwj0ARkBugG0Af8mAAH0AQgBmAKXAXgBCAH0BQAB8gG7CLQBCQH/AwAB/wG8Ae8BtQG0
-        AZEEiwEoAQIBkQH0BwAJUgFMAXQCAAH/Ae8BIwFLAVIBUQHtCwABRAFLAVIBmQH2BwAB8QG0AbsBCQHw
-        AfEB8wH0Av8BLgFQASgBvAcAAXQBGwHDBaABwwKZAgAB/wHtAUsCmgFSAUsB9AcAAQkCtAFLApoBUgFL
-        AZEEtAG7AQABvAG1BP8BUAFPAi4BUAGYAVABTwH0AQABBwS0AewBmQGgAnoBUgJ6ARoBUgH0AwAB8QFR
-        AfYBdAFMAlIC6wNtAewBAAG0AvQBUQH2AXQBTAJSAfAD8wG0AQAB8gGLBLQBUASYAXgBmAFQAU8B9AG0
-        Bf8BeQEaBHoBmgGZAewBAAHxAgcB7wFzAXkBmQF5AnoBUgGSArwB8wFtAQABtAH0AQkBmQF5AZkBeQJ6
-        AXQB9gH/AfMBtAEAAf8BuwG1AfQCCQFQAZgFeAGYAVABLgG0Bf8BGgF5AaABegFSAXoBGgF0Aa4BAAHv
-        AfIC8AG8ARwBeQHDA3oBUgLvAbwBbQEAAbQB9AIJAe8BeQHDA3oBUgG8AfMBtAIAAfQBtAH/AhkBUAGZ
-        A5gBeAGYAVABLgH/AbQG/wGZARoBmgFSAaABUgEaAa4BAAHvAfEEiwHrAXkBwwN6AVIBHAG8AW0BAAG1
-        AfQBCQH/AQkBGgF5AcMDegFSAfABtAIAAf8BtAH/AhkEUAFyAZgBUAFPAf8BAAG0Bv8B9AF5AcMBmgEa
-        AXkB/wHPAQABBwHxArQDtQH3AXoBwwN6AVIBBwHrAQABtQH/BAkBBwF6AcMDegF0AZECAAH/AbMB/wYZ
-        AVABeAFQAbMB/wEAAbQH/wEaAZoBwwF5ARsB/wHPAQABBwHxAc8FtAH3AXoBwwJ6AnQB7AEAAQkB/wEJ
-        Af8BCQL/ARoBegHDAnoCdAH/AgABtAH/BhkCUAH/AbQB/wEAAbQH/wH0AXkBGgGZAfQB/wHPAQABBwHx
-        Ac8GtAHsAZoBGgGZAZoBGgF0AQABCQH/BgkBmQGaARoBmQGaARoBdAIAAbQB8wgZAf8BtAH/AQABtAj/
-        ARoBeQHzAfQB/wG0AQABvAHxAc8GtAGLAZkBeQEaAfYBGgFSAQABCQH/AQkB/wEJA/8BCQEaAXkBGgH2
-        ARoBdAIAAbsBGQH0BxkB/wK0AfQBtAf/AvQD8wH/AbQBAAG8AfEGzwG0AYsB8AFzAXQBmQFSAXMBAAEJ
-        Af8ICQHvAXQBmQFSARsCAAIJAf8HGQH/AbQBGQK0Df8BtAEAAfAB9AjxAfMBkgIHAfAB7QEAAQkM/wG0
-        AwACCQH/BBkD9AH/AbQB/wG7D7QBAAPwArwDBwPvAfcC7QHwAZIBAAEJAf8HmAJ4AZcB/wG0AwAB8QEJ
-        Af8E9AX/ARkBtAG1DQkBtAYAAfQB8AHxAfMEvAEHAfEBkgEAAQkM/wG0AwAB8gHcBf8B9AMZAQkBugHz
-        AfEBuwu0AbUB8QcAAf8C8QHyBPEB8wH3AQAB8wgJA7UBtAEJAwAB9AEJAdwB2wS6AbsDCQH0Af8YAAHy
-        AbwDBwLvAfAQAAFCAU0BPgcAAT4DAAEoAwABQAMAATADAAEBAQABAQUAAYABARYAA/+BAAH/AccC/wHw
-        AQ8BgAEBAf8BwwL/AcABAwGAAQEBAAEBAQABAQGAAQEBgAEBAwABAQGAAQEBgAEBAwABAQIAAYABAQMA
-        AQECAAGAAQEBAAEBAQABAQIAAYABAQEAAQEBAAEBAgABgAEBAQABAQEAAQECAAGAAQEBAAEBAQABAQIA
-        AYABAQEAAQEBAAEBAgABgAEBAQABAQEAAQECAAGAAQEBAAEBAQABAQGAAQEBgAEBAQABAQEAAQEBgAEB
-        AYABAQEAAQEBAAEBAcABAwGAAQME/wHwAQ8BgAEHAQABAwH4AQABwAF/AfABfwEAAQMB+AEAAcABPwGA
-        AQEBAAEBAgAB4AEAAYABAQMAAQECAAGAAQEDAAEBAgABgAEBAYACAAEBAgABgAEBAYABAQEAAQECAAGA
-        AQEBgAEBAQABAQIAAYABAAHAAQEBAAEBAgABgAEAAcABAQEAAQECAAGAAQABwAIAAQECAAGAAQABwAIA
-        AQECAAGAAQEBwAIAAQECAAGAAQEBwAIAAQEB+AEAAYABAQHAAgABAQH8AQABgAEBAcABAAP/AQAC/ws=
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8AHAAB/wH0
+        BfMB/wEAAXoMWQH0BQALGwH0AQAB/wHzDPIB8wH/BwAB9QEJAfcBkgHvAhkB/wEAAXoMWQEaAwAB9AHw
+        CxsB9AEAAewB8gzzAfIB7AcAAfUBuwHtAfcDGQH/AQABegxZAXoB/wIAAfMBmQIbBxoCGwH0AQABBwcA
+        AfQFBwH0AQcH8gHxAQkB9wPtARkC8gFZAXoMWQEbAgAB8wGZCxsB9AEAAQcGAAHzAZIF8gHwAQcBvAXs
+        Ae0B8gEJAbQBkgH3AhkC8gE4AXoMWQGaAgAB8wGZAhsHGgIbAfQBAAEHAfQEBwHwAQcBAAXzAQABBwG8
+        AfcCkgHvAbwB8AHyAQkBuwQZAvIBOA5ZAf8BAAHzAZkLGwH0AQACBwQAAQcBkgHwBQcB8wEHAbwB7wL3
+        AQcCvAHyAQkBkQHtAQkCGQLyAjgBegxZARsBAAHzAZkCGwcaAhsB9AEAAgcEAAEHAZIB8AUHAfMBBwG8
+        AZIC7QO8AfEBCQKRAe0B7wEZAvICOAEaDFkBegEAAfMBmQsbAfQBAAEHAfQEBwHwAQcBAAXzAQABBwG8
+        BuwB8AO7AwcC8gI4CxoBegEaARsBAAHzAZkLGwH0AQABBwYAAfMBkgXyAfABBwG8AewB7wS8AQcC4wFv
+        AeMCFgHxAfICOAEaCRsBGgE4ARsCAAHzAZkCGwcaAhsB9AEAAQcHAAH0BQcB9AEHAbwB7QTsAbwBBwYW
+        AvICOAEaCRsBGgFZAfQCAAHzAZkLGwH0AQABkg7zAZIBvAH3BJIE7wHwBfICOAEaChsB/wMAAfMBmQIb
+        AxoCGwEaApkB8AH/AQABkgPxCbwB8QHwAZIBvAHvCPcBvAXyAlkBGgUbARoDmQH0BAAB8wGZBxsBGgGZ
+        AbwB/wIAAewB8AHxAfIJvAHyAbwB7BCZAgAB8wEbAxoBGwEaApkB9AUAAfMBmQcbARoBvAEHAwAB/wHz
+        DPIB8wH/AXoBmgGZBnoHmgIAAfMFGwEaAZkB9AYAAfMBmQHwBvEB8AKZEwAKGwYaAgAB8wUbARoB9AcA
+        AfMLmQMACPMBGwH3ARsB8wH0CAAJUgFMAXQGAAEHAgABBwgAAfQMuwHyAfMJGwEaAXQB8wgAAXQBGwHD
+        BaABwwKZAgAB/wHwAfQBAAHqAgAB6gEAAfQB8AH/AwABnQGWAZgLmQLzCRsBUwFSAXQB/wIAAQcEtAHs
+        AZkBoAJ6AVICegEaAVIB9AEAAf8BbQEAAUMB8gERAgABEQHyAUMBAAFtAf8BAAH/AZYB6wyaAfQB8wIb
+        BxoBmgFTAXQBeQH/AQABtAX/AXkBGgR6AZoBmQHsAgABBwwAAQcBAAHxAZYB6wyaAfQB8wobAZoBUwF0
+        AZkB/wG0Bf8BGgF5AaABegFSAXoBGgF0Aa4CAAH0AUMKAAFDAfQBAAH/AZUB7AyaAfQB8wIbBxoCGwEa
+        AZMBdAG8AbQG/wGZARoBmgFSAaABUgEaAa4DAAHyCgAB8gMAAbsBlgydAfIB8wsbAfMB9AGTAfYBtAb/
+        AfQBeQHDAZoBGgF5Af8BzwEAAQcB6gERAwAB7AL0AewDAAERAeoBBwHwArsLugG7AfQB8wIbBhoDGwHz
+        AwABtAf/ARoBmgHDAXkBGwH/Ac8HAAH0AgAB9AYAARsNmgG6AQAB8wsbAfMDAAG0B/8B9AF5ARoBmQH0
+        Af8BzwcAAfQCAAH0BgABGwyaARoBuwEAAfMLGwHzAwABtAj/ARoBeQHzAfQB/wG0AQABBwHqAREDAAHs
+        AvQB7AMAAREB6gEHARsNmgG6AQAB8wsbAfMDAAG0B/8C9APzAf8BtAMAAfIKAAHyAgAB8AK7ARwKkwEa
+        ARsB8wsbAfMDAAG0Df8BtAIAAfQBQwoAAUMB9AIAAf8BTQx1ARoB8wIbAhoEGwMaAfQDAA+0AgABBwwA
+        AQcCAAH0AU0MmgH0AfMIGwK8AfMEAAG1DQkBtAIAAf8BbQEAAUMB8gERAgABQwHzAUMBAAFtAf8CAAH0
+        AU0MmgH0AfMIGwG8AfMFAAHxAbsLtAG1AfEDAAH/AfAB9AEAAeoCAAHqAQAB9AHwAf8DAAH/AU0BdQuU
+        ARoB8wgbAfMcAAEHAgABBwgAAfMMmgEaAUIBTQE+BwABPgMAASgDAAFAAwABMAMAAQEBAAEBBQABgAEB
+        FgAD/4EAAv8B/gEBAQABAwHgAQECAAH+AQEBAAEDAYABAQIAAf4BAQEAAQEBgAEBAX8EAAEBAYABAQF+
+        BAABAQGAAQEBAAGCBAABgAEBATwFAAGAAQEBPAUAAYABAQEAAYIEAAGAAQEBfgQAAQEBgAEBAX8EAAEB
+        AYABAQUAAQMBgAEBBQABBwGAAQMEAAHAAQ8BgAEHBAABwAEfAYABBwL/AgABwAE/AYABBwEAAQcB+AEA
+        AfwBPwHAAgABBwH4AQABxAEjAYACAAEDAgABgAEBAwABAQEAAQEBgAEBBQABAQGAAQEFAAEBAcABAwGA
+        BAABAQUAAQcBAAIBAYABAAEBAQABBwEAAgEBgAEAAQEBAAEHAQABAQMAAQEBAAEHAQABAQHAAQMDAAEH
+        AQABAQGAAQEBgAIAAQcBAAEBAYABAQGAAgABDwEAAQEBgAEBAYACAAEfAQABAQHEASMBgAIAAT8C/wH8
+        AT8BwAEACw==
 </value>
   </data>
 </root>
