Icons and support for local file editing

--- a/ILEditor/UserTools/ProjectExplorer.resx
+++ b/ILEditor/UserTools/ProjectExplorer.resx
@@ -136,4 +136,65 @@
         TgDQASA1MVpwzwAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>133, 17</value>
+  </metadata>
+  <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAC+
+        CwAAAk1TRnQBSQFMAgEBBQEAAQgBAAEIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wQACxsB9DIAAfQB8Asb
+        AfQyAAHzAZkCGwcaAhsB9DIAAfMBmQsbAfQyAAHzAZkCGwcaAhsB9DIAAfMBmQsbAfQyAAHzAZkCGwca
+        AhsB9DIAAfMBmQsbAfQyAAHzAZkLGwH0MgAB8wGZAhsHGgIbAfQyAAHzAZkLGwH0MgAB8wGZAhsDGgIb
+        ARoCmQHwAf8yAAHzAZkHGwEaAZkBvAH/MwAB8wGZBxsBGgG8AQc0AAHzAZkB8AbxAfACmTQAAfMLmTkA
+        AfMB7QH3AfMMAAEHAgABBwoAAf8BvAQHAfAZAAHzAe0CEgKuAfcB8wYAAf8B8AH0AQAB6gIAAeoBAAH0
+        AfAB/wUAAfMB7wH/BAAB/wUADRsB/wQAAfMB7QQSBK4B9wHzAwAB/wFtAQABQwHyARECAAERAfIBQwEA
+        AW0B/wEAAfUCvAHwCAAB/wHwAQgB9QF6DFkBGwIAAf8B7QYSBq4B9wH/AQABBwwAAQcBAAEHArQB8wgA
+        AfMCdwGYAXoMWQGaAgAB9AcSB64B9AEAAfQBQwoAAUMB9AEAAe4CtAH0CAAB9AJ3AQgOWQH2AQAB9AcS
+        B64B9AIAAfIKAAHyAgAB/wHxAfMKAAHzAbsB9QE4AXoMWQEaAQAB9AcSB64B9AEHAeoBEQMAAfgC9AH4
+        AwABEQHqAQcOAAHxAfQBOAF6DFkBegH/AfQHEgeuAfQGAAH0AgAB9AYAAv8MAAHyAfMBOAFZAXoMWQL0
+        BhIB6geuAfQGAAH0AgAB9AYAAf8BvAwAAQcB/wI4AXoMWQEaAfQEEgHqAfcClgG7Ba4B9AEHAeoBEQMA
+        AfgC9AH4AwABEQHqAQcBAAEHDAABBwEAAjgBegxZAXoB9AISAeoB9waWAbsDrgH0AgAB8goAAfIDAAG8
+        AfQKAAH0AbwBAAM4C1kBGwH/AfQB6gH3CpYBuwGuAfQBAAH0AUMKAAFDAfQCAAH/Ae8B/wgAAf8B7wH/
+        AQAOOAEbAQAB/wG7DJYBuwH/AQABBwwAAQcDAAH0Ae8B/wIAAvUCAAH/Ae8B/wIABjgBWQcaAf8DAAHz
+        AboIlgG7AfQDAAH/AW0BAAFDAfIBEQIAAUMB8wFDAQABbQH/BAAB/wHvAe4BGwI4ARsBAAHzAf8DAAU4
+        AVkB9AwAAf8B8wG6BJYBuwH0BgAB/wHwAfQBAAHqAgAB6gEAAfQB8AH/BwAB/wGZAjgBGgYAARsEGgEb
+        DwAB/wHyAboBuwH1DAABBwIAAQcMAAH2AnoB9hYAAUIBTQE+BwABPgMAASgDAAFAAwABIAMAAQEBAAEB
+        BgABARYAA/8BAAHgAQEGAAGAAQEGAAGAAQEGAAGAAQEGAAGAAQEGAAGAAQEGAAGAAQEGAAGAAQEGAAGA
+        AQEGAAGAAQEGAAGAAQEGAAGAAQEGAAGAAQMGAAGAAQcGAAGAAQcGAAGAAQcGAAH8AT8B/AE/AfABHwL/
+        AfABDwHEASMB4wHfAQABAwHAAQMBgAEBAQ8B8AEAAQMCAAGAAQEBDwHwAQABAwIAAYABAQEPAfABAAEB
+        AgABwAEDAR8B+AEAAQEEAAH/AfwEAAEBAYABPwH8BAABAQGAAT8B/AYAAb8B/QQAAcABAwGfAfkEAAGA
+        AQEBjwHxAQABAQIAAYABAQHGAWMBAAEBAcABAwGAAQEB4AEnAQEB/wHgAQ8BxAEjAfgBPwEDAf8B+AE/
+        AfwBPwH8AT8C/ws=
+</value>
+  </data>
 </root>
