Create, Rename, Delete, Remove on Project Explorer

--- a/ILEditor/UserTools/ProjectExplorer.resx
+++ b/ILEditor/UserTools/ProjectExplorer.resx
@@ -144,7 +144,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAC+
-        CwAAAk1TRnQBSQFMAgEBBQEAAQgBAAEIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        CwAAAk1TRnQBSQFMAgEBBQEAARABAAEQAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -178,17 +178,17 @@
         ARoCmQHwAf8yAAHzAZkHGwEaAZkBvAH/MwAB8wGZBxsBGgG8AQc0AAHzAZkB8AbxAfACmTQAAfMLmTkA
         AfMB7QH3AfMMAAEHAgABBwoAAf8BvAQHAfAZAAHzAe0CEgKuAfcB8wYAAf8B8AH0AQAB6gIAAeoBAAH0
         AfAB/wUAAfMB7wH/BAAB/wUADRsB/wQAAfMB7QQSBK4B9wHzAwAB/wFtAQABQwHyARECAAERAfIBQwEA
-        AW0B/wEAAfUCvAHwCAAB/wHwAQgB9QF6DFkBGwIAAf8B7QYSBq4B9wH/AQABBwwAAQcBAAEHArQB8wgA
-        AfMCdwGYAXoMWQGaAgAB9AcSB64B9AEAAfQBQwoAAUMB9AEAAe4CtAH0CAAB9AJ3AQgOWQH2AQAB9AcS
-        B64B9AIAAfIKAAHyAgAB/wHxAfMKAAHzAbsB9QE4AXoMWQEaAQAB9AcSB64B9AEHAeoBEQMAAfgC9AH4
+        AW0B/wEAAf8CvAHwCAAB/wHwAQgB/wF6DFkBGwIAAf8B7QYSBq4B9wH/AQABBwwAAQcBAAEHArQB8wgA
+        AfMCdwGYAXoMWQGaAgAB9AcSB64B9AEAAfQBQwoAAUMB9AEAAbwCtAH0CAAB9AJ3AQgOWQH2AQAB9AcS
+        B64B9AIAAfIKAAHyAgAB/wHxAfMKAAHzAbsB/wE4AXoMWQEaAQAB9AcSB64B9AEHAeoBEQMAAewC9AHs
         AwABEQHqAQcOAAHxAfQBOAF6DFkBegH/AfQHEgeuAfQGAAH0AgAB9AYAAv8MAAHyAfMBOAFZAXoMWQL0
         BhIB6geuAfQGAAH0AgAB9AYAAf8BvAwAAQcB/wI4AXoMWQEaAfQEEgHqAfcClgG7Ba4B9AEHAeoBEQMA
-        AfgC9AH4AwABEQHqAQcBAAEHDAABBwEAAjgBegxZAXoB9AISAeoB9waWAbsDrgH0AgAB8goAAfIDAAG8
+        AewC9AHsAwABEQHqAQcBAAEHDAABBwEAAjgBegxZAXoB9AISAeoB9waWAbsDrgH0AgAB8goAAfIDAAG8
         AfQKAAH0AbwBAAM4C1kBGwH/AfQB6gH3CpYBuwGuAfQBAAH0AUMKAAFDAfQCAAH/Ae8B/wgAAf8B7wH/
-        AQAOOAEbAQAB/wG7DJYBuwH/AQABBwwAAQcDAAH0Ae8B/wIAAvUCAAH/Ae8B/wIABjgBWQcaAf8DAAHz
-        AboIlgG7AfQDAAH/AW0BAAFDAfIBEQIAAUMB8wFDAQABbQH/BAAB/wHvAe4BGwI4ARsBAAHzAf8DAAU4
+        AQAOOAEbAQAB/wG7DJYBuwH/AQABBwwAAQcDAAH0Ae8B/wIAAv8CAAH/Ae8B/wIABjgBWQcaAf8DAAHz
+        AboIlgG7AfQDAAH/AW0BAAFDAfIBEQIAAUMB8wFDAQABbQH/BAAB/wHvAbwBGwI4ARsBAAHzAf8DAAU4
         AVkB9AwAAf8B8wG6BJYBuwH0BgAB/wHwAfQBAAHqAgAB6gEAAfQB8AH/BwAB/wGZAjgBGgYAARsEGgEb
-        DwAB/wHyAboBuwH1DAABBwIAAQcMAAH2AnoB9hYAAUIBTQE+BwABPgMAASgDAAFAAwABIAMAAQEBAAEB
+        DwAB/wHyAboBuwH/DAABBwIAAQcMAAH2AnoB9hYAAUIBTQE+BwABPgMAASgDAAFAAwABIAMAAQEBAAEB
         BgABARYAA/8BAAHgAQEGAAGAAQEGAAGAAQEGAAGAAQEGAAGAAQEGAAGAAQEGAAGAAQEGAAGAAQEGAAGA
         AQEGAAGAAQEGAAGAAQEGAAGAAQEGAAGAAQMGAAGAAQcGAAGAAQcGAAGAAQcGAAH8AT8B/AE/AfABHwL/
         AfABDwHEASMB4wHfAQABAwHAAQMBgAEBAQ8B8AEAAQMCAAGAAQEBDwHwAQABAwIAAYABAQEPAfABAAEB
@@ -197,4 +197,13 @@
         AfwBPwH8AT8C/ws=
 </value>
   </data>
+  <metadata name="projRightClick.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>243, 17</value>
+  </metadata>
+  <metadata name="fileRightClick.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>371, 17</value>
+  </metadata>
+  <metadata name="folderRightClick.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>493, 17</value>
+  </metadata>
 </root>
