--- a/ILEditor/Editor.resx
+++ b/ILEditor/Editor.resx
@@ -131,12 +131,34 @@
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFlSURBVDhPY4CBfwGSbn99JWb/95dcQCz+5ydRB9b830dS
-        5Euo6I8fczNe/1iU94pY/K/RNwdswD9fMYv/mcYfftxf+//LteVE46+3VvhCDPATNwcbcG/t/89XlxON
-        EQa4inN/CRP7+bEt8Pf7eq8/xOK/JXbTGdRWHG0xW3N0SfTspRuWliefXV2WeJ4QXluacO5KvPW0fwHi
+        5FOo8I8fczNe/1iU94pY/K/RNwdswD9fMYv/mcYfftxf+//LteVE46+3VvhCDPATNwcbcG/t/89XlxON
+        EQa4inN/ChP9+b4t8Pfbeo8/xOK/JXbTGdRWHG0xW3N0SfTspRuWliefXV2WeJ4QXluacO5KvPW0fwHi
         YQxfbyxf8OnK0v+k4A/XVv533Xj0Dtj55Bjw5caK/5k7D5JvAMgFLhugLtBeebTNYc3h5ZZrDq5VXrfx
-        tNy6dRcJYZk1a85zbJ88leFgtRXYEMXNlSt49xf+jLzU/ivr6rTfxOKYSxOACelQpSjP1upflZXV/0Hp
-        AJuTceGvt1f6MTAcrEqxX1P/r76UDAPACelwuZzAlppftWXkugAIZLdWHxPfXPtr8YUZ//efmUk0nnlp
-        OiQzgcGBGl2hozWzBI7WrSEW8x2pjgYA996u3xL1CkMAAAAASUVORK5CYII=
+        tNy6dRcJYZk1a85zbJ88leFgtRXYEMXNlSt49+f/DL/U+ivj6rTfxOKYSxOACelQpSjP5upflZXV/0Hp
+        AJuTceGvt1f6MTAcrEqxX1X/r76UDAPACelwuZzApppftWXkugAIZLdWHxPfVPtr8YUZ//efmUk0nnlp
+        OiQzgcGBGl2hozWzBI7WrSEW8x2pjgYALKWuh8N3y/MAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="zoomInButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAE1SURBVDhPnZK7LkRRGEaPBA2dRCXxBkqVZhIZvIJCxANo
+        PYCERKWZatRTKJQq8RyCaJVULiFYi/lO5uwZE/ElKznn3/9976rQAhzBJTzANfRgCyZgrHbgET5/4QIW
+        YaQMjuM7nMMhdOEWcnYHM9CQbaeyDsugVmAepuEAkqQDDTmzB1ZOsLqC7Z/Pb52Cfh8wpyFyYR7Y9qDK
+        BEuQLtoaIret0Zlt20B5hfv+9xlMwhvouwe1vCqNLsyZrSoGn/S/N8C208Eu1PKeNbptFxaVI2xCEqxp
+        iHwkOXDbkW1bWdmZHenjTU1BLV+YjyRJ3LYLc2bbtnKCZR+G5Aszc5wkCyt5hnUY0iz4SLznMsjkVjbY
+        /xcYmUTZtvfsVbltF5aZtQ8maSzzr1qFJ0hn/1ILbqqqOv4C1fBuh3EUwJ8AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="zoomOutButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAEhSURBVDhPnZKxLkRBFIavBA3dJiqJN1CqNBJZvIJCxANo
+        PYCERKVR6RVbbKkSzyGIVknFJiv4vuK/uffu7Eb8yVfMmTNnzvxnqo5W4QLu4Q0e4QYOYA5m6gje4WcK
+        d7AGRXk4iV9wC+dwDc+QvRdYgpZsOzebsAFNLcIZpMgVtOSb3fDm7uGmBmDeN/QMRBrmhm3P0jqki76B
+        SLcN+uZNeCgwhHkYg7knUMtRGdSwFTgssAe2nQ6OoZZzNqjbGjZN+5ACOwYiP0k2dLskO3sFc5zUAtTy
+        h/lJUkS3Ncw327Y357CcwoT8YVZOksSwLp+wCxNaBj+Jc+4esrg3e9j1CIpFlG07Z0el2xqWNxtvFmmZ
+        +Vdtwweks39pC56qqrr8BexIaKOXwSzXAAAAAElFTkSuQmCC
 </value>
   </data>
   <metadata name="tool_bar.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -160,7 +182,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAA4
-        CwAAAk1TRnQBSQFMAgEBBAEAAegBAAHoAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        CwAAAk1TRnQBSQFMAgEBBAEAAfgBAAH4AQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
