--- a/ILEditor/UserTools/IFSBrowser.resx
+++ b/ILEditor/UserTools/IFSBrowser.resx
@@ -124,9 +124,9 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAB0
-        DwAAAk1TRnQBSQFMAgEBCQEAAbABAAGwAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
-        AwABQAMAATADAAEBAQABCAYAAQwYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADi
+        CgAAAk1TRnQBSQFMAgEBBAEAARABAAEQAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
         AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
@@ -153,45 +153,28 @@
         AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wcAAfMB7QH3AfM6AAHz
-        Ae0CEgKuAfcB8zYAAfMB7QQSBK4B9wHzMgAB/wHtBhIGrgH3Af8wAAH0BxIHrgH0MAAB9AcSB64B9DAA
-        AfQHEgeuAfQwAAH0BxIHrgH0MAAB9AYSAeoHrgH0MAAB9AQSAeoB9wKWAbsFrgH0MAAB9AISAeoB9waW
-        AbsDrgH0MAAB9AHqAfcKlgG7Aa4B9DAAAf8BuwyWAbsB/zIAAfMBugiWAbsB9DUAAf8B8wG6BJYBuwH0
-        OQAB/wHyAboBuwH/TQAB/wH0BfMB/wEAAXoMWQH0BQALGwH0AQAB/wHzDPIB8wH/BwAB/wEJAfcBkgHv
-        AhkB/wEAAXoMWQEaAwAB9AHwCxsB9AEAAewB8gzzAfIB7AcAAf8BuwHtAfcDGQH/AQABegxZAXoB/wIA
-        AfMBmQIbBxoCGwH0AQABBwcAAfQFBwH0AQcH8gHxAQkB9wPtARkC8gFZAXoMWQEbAgAB8wGZCxsB9AEA
-        AQcGAAHzAZIF8gHwAQcBvAXsAe0B8gEJAbQBkgH3AhkC8gE4AXoMWQGaAgAB8wGZAhsHGgIbAfQBAAEH
-        AfQEBwHwAQcBAAXzAQABBwG8AfcCkgHvAbwB8AHyAQkBuwQZAvIBOA5ZAf8BAAHzAZkLGwH0AQACBwQA
-        AQcBkgHwBQcB8wEHAbwB7wL3AQcCvAHyAQkBkQHtAQkCGQLyAjgBegxZARsBAAHzAZkCGwcaAhsB9AEA
-        AgcEAAEHAZIB8AUHAfMBBwG8AZIC7QO8AfEBCQKRAe0B7wEZAvICOAEaDFkBegEAAfMBmQsbAfQBAAEH
-        AfQEBwHwAQcBAAXzAQABBwG8BuwB8AO7AwcC8gI4CxoBegEaARsBAAHzAZkLGwH0AQABBwYAAfMBkgXy
-        AfABBwG8AewB7wS8AQcC4wFvAeMCFgHxAfICOAEaCRsBGgE4ARsCAAHzAZkCGwcaAhsB9AEAAQcHAAH0
-        BQcB9AEHAbwB7QTsAbwBBwYWAvICOAEaCRsBGgFZAfQCAAHzAZkLGwH0AQABkg7zAZIBvAH3BJIE7wHw
-        BfICOAEaChsB/wMAAfMBmQIbAxoCGwEaApkB8AH/AQABkgPxCbwB8QHwAZIBvAHvCPcBvAXyAlkBGgUb
-        ARoDmQH0BAAB8wGZBxsBGgGZAbwB/wIAAewB8AHxAfIJvAHyAbwB7BCZAgAB8wEbAxoBGwEaApkB9AUA
-        AfMBmQcbARoBvAEHAwAB/wHzDPIB8wH/AXoBmgGZBnoHmgIAAfMFGwEaAZkB9AYAAfMBmQHwBvEB8AKZ
-        EwAKGwYaAgAB8wUbARoB9AcAAfMLmQMACPMBGwH3ARsB8wH0CAAJUgFMAXQGAAEHAgABBwgAAfQMuwHy
-        AfMJGwEaAXQB8wgAAXQBGwHDBaABwwKZAgAB/wHwAfQBAAHqAgAB6gEAAfQB8AH/AwABnQGWAZgLmQLz
-        CRsBUwFSAXQB/wIAAQcEtAHsAZkBoAJ6AVICegEaAVIB9AEAAf8BbQEAAUMB8gERAgABEQHyAUMBAAFt
-        Af8BAAH/AZYB6wyaAfQB8wIbBxoBmgFTAXQBeQH/AQABtAX/AXkBGgR6AZoBmQHsAgABBwwAAQcBAAHx
-        AZYB6wyaAfQB8wobAZoBUwF0AZkB/wG0Bf8BGgF5AaABegFSAXoBGgF0Aa4CAAH0AUMKAAFDAfQBAAH/
-        AZUB7AyaAfQB8wIbBxoCGwEaAZMBdAG8AbQG/wGZARoBmgFSAaABUgEaAa4DAAHyCgAB8gMAAbsBlgyd
-        AfIB8wsbAfMB9AGTAfYBtAb/AfQBeQHDAZoBGgF5Af8BzwEAAQcB6gERAwAB7AL0AewDAAERAeoBBwHw
-        ArsLugG7AfQB8wIbBhoDGwHzAwABtAf/ARoBmgHDAXkBGwH/Ac8HAAH0AgAB9AYAARsNmgG6AQAB8wsb
-        AfMDAAG0B/8B9AF5ARoBmQH0Af8BzwcAAfQCAAH0BgABGwyaARoBuwEAAfMLGwHzAwABtAj/ARoBeQHz
-        AfQB/wG0AQABBwHqAREDAAHsAvQB7AMAAREB6gEHARsNmgG6AQAB8wsbAfMDAAG0B/8C9APzAf8BtAMA
-        AfIKAAHyAgAB8AK7ARwKkwEaARsB8wsbAfMDAAG0Df8BtAIAAfQBQwoAAUMB9AIAAf8BTQx1ARoB8wIb
-        AhoEGwMaAfQDAA+0AgABBwwAAQcCAAH0AU0MmgH0AfMIGwK8AfMEAAG1DQkBtAIAAf8BbQEAAUMB8gER
-        AgABQwHzAUMBAAFtAf8CAAH0AU0MmgH0AfMIGwG8AfMFAAHxAbsLtAG1AfEDAAH/AfAB9AEAAeoCAAHq
-        AQAB9AHwAf8DAAH/AU0BdQuUARoB8wgbAfMcAAEHAgABBwgAAfMMmgEaAUIBTQE+BwABPgMAASgDAAFA
-        AwABMAMAAQEBAAEBBQABgAEBFgAD/wEAAfwBPwYAAfABDwYAAcABA1YAAcABAwYAAeABDwYAAfgBPwYA
-        Av8B/gEBAQABAwHgAQECAAH+AQEBAAEDAYABAQIAAf4BAQEAAQEBgAEBAX8EAAEBAYABAQF+BAABAQGA
-        AQEBAAGCBAABgAEBATwFAAGAAQEBPAUAAYABAQEAAYIEAAGAAQEBfgQAAQEBgAEBAX8EAAEBAYABAQUA
-        AQMBgAEBBQABBwGAAQMEAAHAAQ8BgAEHBAABwAEfAYABBwL/AgABwAE/AYABBwEAAQcB+AEAAfwBPwHA
-        AgABBwH4AQABxAEjAYACAAEDAgABgAEBAwABAQEAAQEBgAEBBQABAQGAAQEFAAEBAcABAwGABAABAQUA
-        AQcBAAIBAYABAAEBAQABBwEAAgEBgAEAAQEBAAEHAQABAQMAAQEBAAEHAQABAQHAAQMDAAEHAQABAQGA
-        AQEBgAIAAQcBAAEBAYABAQGAAgABDwEAAQEBgAEBAYACAAEfAQABAQHEASMBgAIAAT8C/wH8AT8BwAEA
-        Cw==
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8AGAALGwH0
+        BQAB9AHvAewCEQHsAe8B9AQAARoOegEaDRsB/wMAAfQB8AsbAfQDAAH/AQcBDgEAAREC7AERAQABDgEH
+        Af8CAAGaDlkBmgF6DFkBGwMAAfMBmQIbBxoCGwH0AgAB/wHrAQABbQH0BAAB9AFtAQAB6wH/AQAB8wZZ
+        AkMGWQHzAXoMWQGaAwAB8wGZCxsB9AIAAQcBAAHvAf8GAAH/Ae8BAAEHAQAB/wGaBVkCRAVZAZoB/w5Z
+        AfYCAAHzAZkCGwcaAhsB9AEAAfQBDgFtAf8DAAITAwAB/wFtAQ4B9AEAAfQMWQH0AQABOAF6DFkBGgIA
+        AfMBmQsbAfQBAAHvAQAB9AQAAhMEAAH0AQAB7wIAAZoEWQIVBFkBmgIAATgBegxZAXoB/wEAAfMBmQIb
+        BxoCGwH0AQAB7AERBQACEwUAAREB7AIAAfQEWQIQBFkB9AIAATgBWQF6DFkB9AEAAfMBmQsbAfQBAAER
+        AewFAAITBQAB7AERAwABmgNZAhADWQGaAwACOAF6DFkBGgEAAfMBmQsbAfQBAAERAewFAALsBQAB7AER
+        AwAB9ANZAhADWQH0AwACOAF6DFkBegEAAfMBmQIbBxoCGwH0AQAB7AERDAABEQHsBAABmgJZAhACWQGa
+        BAADOAtZARsB/wEAAfMBmQsbAfQBAAHvAQAB9AQAAgcEAAH0AQAB7wQAAfUCWQIQAlkB9QQADjgBGwIA
+        AfMBmQIbAxoCGwEaApkB8AH/AQAB9AEOAW0B/wMAAhMDAAH/AW0BDgH0BQABmgFZAhEBWQGaBQAGOAFZ
+        BxoB/wIAAfMBmQcbARoBmQG8Af8DAAEHAQAB7wH/BgAB/wHvAQABBwYAAfUEWQH1BQAFOAFZAfQKAAHz
+        AZkHGwEaAbwBBwQAAf8B6wEAAW0B9AQAAfQBbQEAAesB/wcAARoCWQEaBgABGwQaARsLAAHzAZkB8Abx
+        AfACmQUAAf8BBwEOAQABEQLsAREBAAEOAQcB/wgAAfYCegH2FwAB8wuZBwAB9AHvAewCEQHsAe8B9AsA
+        AhsHAAFCAU0BPgcAAT4DAAEoAwABQAMAASADAAEBAQABAQYAAQEWAAP/gQAC/wHgAQEB8AEPAwABAwGA
+        AQEBwAEDAwABAwGAAQEBgwHBAwABAwGAAQEBhwHhAwABAQGAAQEBDgFwAYABAQEAAQEBgAEBAR4BeAHA
+        AQMCAAGAAQEBPgF8AcABAwIAAYABAQE+AXwB4AEHAgABgAEBAT4BfAHgAQcCAAGAAQEBPwH8AfABDwIA
+        AYABAQEeAXgB8AEPAQABAQGAAQEBDgFwAfgBHwEAAQEBgAEDAYcB4QH4AR8BAQH/AYABBwGDAcEB/AE/
+        AQMB/wGAAQcBwAEDAfwBPwL/AYABBwHwAQ8B/gF/Cw==
 </value>
   </data>
+  <metadata name="rightClickMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>127, 17</value>
+  </metadata>
 </root>
