Compile Dropdown and Error List

--- a/ILEditor/UserTools/ErrorListing.resx
+++ b/ILEditor/UserTools/ErrorListing.resx
@@ -125,7 +125,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAA4
-        CgAAAk1TRnQBSQFMAgEBAwEAATABAAEwAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        CgAAAk1TRnQBSQFMAgEBAwEAATgBAAE4AQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -154,18 +154,18 @@
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
         AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wYAAf8BGwGaAZQB8wH/
-        BQABGg56ARoEAAH0Ae8B+AIRAfgB7wH0FwAB9gEaA3oDFgEaAfUDAAGaDlkBmgIAAf8BBwEOAQABEQL4
+        BQABGg56ARoEAAH0Ae8B7AIRAewB7wH0FwAB9gEaA3oDFgEaAf8DAAGaDlkBmgIAAf8BBwEOAQABEQLs
         AREBAAEOAQcB/xIAAf8B8wGaBXoFFgGaAfMB/wHzBlkCQwZZAfMBAAH/AesBAAFtAfQEAAH0AW0BAAHr
         Af8RAAGaB3oHFgGUAf8BmgVZAkQFWQGaAf8BAAEHAQAB7wH/BgAB/wHvAQABBxEAAZoHegcWAZQBAAH0
         DFkB9AEAAfQBDgFtAf8DAAITAwAB/wFtAQ4B9BAAAZoHegcWAZQCAAGaBFkCFQRZAZoCAAHvAQAB9AQA
-        AhMEAAH0AQAB7xAAAZoHegcWAZQCAAH0BFkCEARZAfQCAAH4AREFAAITBQABEQH4EAABmgd6BxYBlAMA
-        AZoDWQIQA1kBmgMAAREB+AUAAhMFAAH4AREQAAGaB3oHFgGUAwAB9ANZAhADWQH0AwABEQH4BQAC7AUA
-        AfgBERAAAZoGegGZAZMGFgGUBAABmgJZAhACWQGaBAAB+AERDAABEQH4EAABmgR6AZkBuwK6AbsBBwQW
-        AZQEAAH1AlkCEAJZAfUEAAHvAQAB9AQAAgcEAAH0AQAB7xAAAZoBegGaAQgIugEHAZMBFgGUBQABmgFZ
-        AhEBWQGaBQAB9AEOAW0B/wMAAhMDAAH/AW0BDgH0EAABGgG7DLoBuwG8BQAB9QRZAfUGAAEHAQAB7wH/
+        AhMEAAH0AQAB7xAAAZoHegcWAZQCAAH0BFkCEARZAfQCAAHsAREFAAITBQABEQHsEAABmgd6BxYBlAMA
+        AZoDWQIQA1kBmgMAAREB7AUAAhMFAAHsAREQAAGaB3oHFgGUAwAB9ANZAhADWQH0AwABEQHsBQAC7AUA
+        AewBERAAAZoGegGZAZMGFgGUBAABmgJZAhACWQGaBAAB7AERDAABEQHsEAABmgR6AZkBuwK6AbsBBwQW
+        AZQEAAH/AlkCEAJZAf8EAAHvAQAB9AQAAgcEAAH0AQAB7xAAAZoBegGaAQgIugEHAZMBFgGUBQABmgFZ
+        AhEBWQGaBQAB9AEOAW0B/wMAAhMDAAH/AW0BDgH0EAABGgG7DLoBuwG8BQAB/wRZAf8GAAEHAQAB7wH/
         BgAB/wHvAQABBxEAAf8B9AG7CroBuwH0Af8GAAEaAlkBGgcAAf8B6wEAAW0B9AQAAfQBbQEAAesB/xQA
-        AfUB8Aa6AfAB9QkAAfYCegH2CAAB/wEHAQ4BAAERAvgBEQEAAQ4BBwH/FwAB/wHzArsB8wH/DAACGwsA
-        AfQB7wH4AhEB+AHvAfQUAAFCAU0BPgcAAT4DAAEoAwABQAMAARADAAEBAQABAQUAAYAXAAP/AQAB+AEf
+        Af8B8Aa6AfAB/wkAAfYCegH2CAAB/wEHAQ4BAAERAuwBEQEAAQ4BBwH/FwAB/wHzArsB8wH/DAACGwsA
+        AfQB7wHsAhEB7AHvAfQUAAFCAU0BPgcAAT4DAAEoAwABQAMAARADAAEBAQABAQUAAYAXAAP/AQAB+AEf
         AgAB8AEPAgAB4AEHAgABwAEDBgABgwHBBgABhwHhBAABgAEBAQ4BcAQAAcABAwEeAXgEAAHAAQMBPgF8
         BAAB4AEHAT4BfAQAAeABBwE+AXwEAAHwAQ8BPwH8BAAB8AEPAR4BeAQAAfgBHwEOAXAEAAH4AR8BhwHh
         BAAB/AE/AYMBwQIAAeABBwH8AT8BwAEDAgAB+AEfAf4BfwHwAQ8CAAs=
